--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
                         <li class="nav-item"><a class="nav-link" href="https://poweron.club">Home</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="https://poweron.club/about">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="https://poweron.club/project">Project</a></li>
-                        <li class="nav-item"><a class="nav-link" href="mailto:dohyeon@postech.ac.kr">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="mailto:donghyunlim@postech.ac.kr">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -58,17 +58,17 @@
                     <div class="column mb-5" style="display:flex; flex-direction:row; width:100%; flex-wrap:wrap; justify-content: center; align-items:center;">
                         <div class="flex-shirink-0">
                             <!-- 회장 사진 부분, assets/members/ 폴더 안에 사진 넣어서 경로 넣어주면 됨! -->
-                            <img class="box" src="assets/members/leader.jpeg">
+                            <img class="box" src="assets/members/donghyun.jpeg">
                         </div>
                         <div class="media-content flex-grow-1 py-5 px-5" style="display:flex; align-items:center">
                             <div class="content">
                                 <p class="p-name">
                                     <!-- 이름 수정 부분 -->
-                                    <strong>이도현</strong>
+                                    <strong>임동현</strong>
                                     <small>회장</small>
                                 </p>
                                 <!-- 간단한 인사 -->
-                                <p>2022-2023 파워온 회장인 IT융합공학과 20학번 이도현입니다!</p>
+                                <p>2023-2024 파워온 회장인 전자전기공학과 21학번 임동현입니다!</p>
                                 <p>잘 부탁드려요 😀</p>
                             </div>
                         </div>
@@ -79,12 +79,12 @@
                         <div class="flex-grow-0 column mb-5" style="display:flex; flex-direction:row; width:50%; flex-wrap:wrap; justify-content: center; align-items:center">
                             <div class="flex-shirink-0">
                                 <!-- 멤버 사진 부분, assets/members/ 폴더 안에 사진 넣어서 경로 넣어주면 됨! -->
-                                <img class="box-member" src="assets/members/eojin.jpeg">
+                                <img class="box-member" src="assets/members/yeongcheol.jpeg">
                             </div>
                             <div class="flex-grow-1 px-5" style="display:flex; justify-content: left; align-items: center;">
                                 <p class="content" style="width:110px">
                                     <!-- 이름과 직책 -->
-                                    <strong>서어진</strong> <small> 부회장 </small>
+                                    <strong>김영철</strong> <small> 부회장 </small>
                                 </p>
                             </div>
                         </div>
@@ -95,48 +95,36 @@
                         <div class="flex-grow-0 mb-5" style="display:flex; flex-direction:row; width:50%; flex-wrap:wrap; justify-content: center; align-items:center">
                             <div class="flex-shirink-0">
                                 <!-- 멤버 사진 부분, assets/members/ 폴더 안에 사진 넣어서 경로 넣어주면 됨! -->
-                                <img class="box-member" src="assets/members/jayeong.jpeg">
+                                <img class="box-member" src="assets/members/minkyung.jpeg">
                             </div>
                             <div class="flex-grow-1 px-5" style="display:flex; justify-content: left; align-items: center;">
                                 <p class="content" style="width:110px">
                                     <!-- 이름과 직책 -->
-                                    <strong>박자영</strong> <small> 총무 </small>
+                                    <strong>신민경</strong> <small> 총무 </small>
                                 </p>
                             </div>
                         </div>
                         <div class="flex-grow-0 mb-5" style="display:flex; flex-direction:row; width:50%; flex-wrap:wrap; justify-content: center; align-items:center">
                             <div class="flex-shirink-0">
                                 <!-- 멤버 사진 부분, assets/members/ 폴더 안에 사진 넣어서 경로 넣어주면 됨! -->
-                                <img class="box-member" src="assets/members/minkyung.jpeg">
+                                <img class="box-member" src="assets/members/juhwan.jpeg">
                             </div>
                             <div class="flex-grow-1 px-5" style="display:flex; justify-content: left; align-items: center;">
                                 <p class="content" style="width:110px">
                                     <!-- 이름과 직책 -->
-                                    <strong>신민경</strong> <small> 홍보부 </small>
+                                    <strong>김주환</strong> <small> 홍보부장 </small>
                                 </p>
                             </div>
                         </div>
                         <div class="flex-grow-0 column mb-5" style="display:flex; flex-direction:row; width:50%; flex-wrap:wrap; justify-content: center; align-items:center">
                             <div class="flex-shirink-0">
                                 <!-- 멤버 사진 부분, assets/members/ 폴더 안에 사진 넣어서 경로 넣어주면 됨! -->
-                                <img class="box-member" src="assets/members/seungmin.jpeg">
+                                <img class="box-member" src="assets/members/dohyeon.jpeg">
                             </div>
                             <div class="flex-grow-1 px-5" style="display:flex; justify-content: left; align-items: center;">
                                 <p class="content" style="width:110px">
                                     <!-- 이름과 직책 -->
-                                    <strong>임승민</strong> <small> 장비부장</small>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="flex-grow-0 column mb-5" style="display:flex; flex-direction:row; width:50%; flex-wrap:wrap; justify-content: center; align-items:center">
-                            <div class="flex-shirink-0">
-                                <!-- 멤버 사진 부분, assets/members/ 폴더 안에 사진 넣어서 경로 넣어주면 됨! -->
-                                <img class="box-member" src="assets/members/donghyun.jpeg">
-                            </div>
-                            <div class="flex-grow-1 px-5" style="display:flex; justify-content: left; align-items: center;">
-                                <p class="content" style="width:110px">
-                                    <!-- 이름과 직책 -->
-                                    <strong>임동현</strong> <small> 장비부</small>
+                                    <strong>이도현</strong> <small> 장비부장</small>
                                 </p>
                             </div>
                         </div>
@@ -152,42 +140,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="flex-grow-0 column mb-5" style="display:flex; flex-direction:row; width:50%; flex-wrap:wrap; justify-content: center; align-items:center">
-                            <div class="flex-shirink-0">
-                                <!-- 멤버 사진 부분, assets/members/ 폴더 안에 사진 넣어서 경로 넣어주면 됨! -->
-                                <img class="box-member" src="assets/members/haryun.jpeg">
-                            </div>
-                            <div class="flex-grow-1 px-5" style="display:flex; justify-content: left; align-items: center;">
-                                <p class="content" style="width:110px">
-                                    <!-- 이름과 직책 -->
-                                    <strong>김하륜</strong> <small> 교육부장</small>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="flex-grow-0 mb-5" style="display:flex; flex-direction:row; width:50%; flex-wrap:wrap; justify-content: center; align-items:center">
-                            <div class="flex-shirink-0">
-                                <!-- 멤버 사진 부분, assets/members/ 폴더 안에 사진 넣어서 경로 넣어주면 됨! -->
-                                <img class="box-member" src="assets/members/yeongcheol.jpeg">
-                            </div>
-                            <div class="flex-grow-1 px-5" style="display:flex; justify-content: left; align-items: center;">
-                                <p class="content" style="width:110px">
-                                    <!-- 이름과 직책 -->
-                                    <strong>김영철</strong> <small> 교육부 </small>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="flex-grow-0 mb-5" style="display:flex; flex-direction:row; width:50%; flex-wrap:wrap; justify-content: center; align-items:center">
-                            <div class="flex-shirink-0">
-                                <!-- 멤버 사진 부분, assets/members/ 폴더 안에 사진 넣어서 경로 넣어주면 됨! -->
-                                <img class="box-member" src="assets/members/chaeyeon.jpeg">
-                            </div>
-                            <div class="flex-grow-1 px-5" style="display:flex; justify-content: left; align-items: center;">
-                                <p class="content" style="width:110px">
-                                    <!-- 이름과 직책 -->
-                                    <strong>김채연</strong> <small> 교육부 </small>
-                                </p>
-                            </div>
-                        </div>
+                        
                         <!--홀수일 경우의 alignment를 위한 dummy입니다.-->
                         <div class="flex-grow-0 mb-5" style="display:flex; flex-direction:row; width:50%; flex-wrap:wrap; justify-content: center; align-items:center">
                             <div class="flex-shirink-0">
