--- a/about.html
+++ b/about.html
@@ -116,6 +116,78 @@
                                 </p>
                             </div>
                         </div>
+                        <div class="flex-grow-0 mb-5" style="display:flex; flex-direction:row; width:50%; flex-wrap:wrap; justify-content: center; align-items:center">
+                            <div class="flex-shirink-0">
+                                <!-- 멤버 사진 부분, assets/members/ 폴더 안에 사진 넣어서 경로 넣어주면 됨! -->
+                                <img class="box-member" src="assets/members/dan.jpeg">
+                            </div>
+                            <div class="flex-grow-1 px-5" style="display:flex; justify-content: left; align-items: center;">
+                                <p class="content" style="width:110px">
+                                    <!-- 이름과 직책 -->
+                                    <strong>김단</strong> <small> 홍보부 </small>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="flex-grow-0 column mb-5" style="display:flex; flex-direction:row; width:50%; flex-wrap:wrap; justify-content: center; align-items:center">
+                            <div class="flex-shirink-0">
+                                <!-- 멤버 사진 부분, assets/members/ 폴더 안에 사진 넣어서 경로 넣어주면 됨! -->
+                                <img class="box-member" src="assets/members/seungju.jpeg">
+                            </div>
+                            <div class="flex-grow-1 px-5" style="display:flex; justify-content: left; align-items: center;">
+                                <p class="content" style="width:110px">
+                                    <!-- 이름과 직책 -->
+                                    <strong>김승주</strong> <small> 교육부장</small>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="flex-grow-0 column mb-5" style="display:flex; flex-direction:row; width:50%; flex-wrap:wrap; justify-content: center; align-items:center">
+                            <div class="flex-shirink-0">
+                                <!-- 멤버 사진 부분, assets/members/ 폴더 안에 사진 넣어서 경로 넣어주면 됨! -->
+                                <img class="box-member" src="assets/members/guntae.jpeg">
+                            </div>
+                            <div class="flex-grow-1 px-5" style="display:flex; justify-content: left; align-items: center;">
+                                <p class="content" style="width:110px">
+                                    <!-- 이름과 직책 -->
+                                    <strong>박건태</strong> <small> 교육부</small>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="flex-grow-0 column mb-5" style="display:flex; flex-direction:row; width:50%; flex-wrap:wrap; justify-content: center; align-items:center">
+                            <div class="flex-shirink-0">
+                                <!-- 멤버 사진 부분, assets/members/ 폴더 안에 사진 넣어서 경로 넣어주면 됨! -->
+                                <img class="box-member" src="assets/members/kangdonghyun.jpeg">
+                            </div>
+                            <div class="flex-grow-1 px-5" style="display:flex; justify-content: left; align-items: center;">
+                                <p class="content" style="width:110px">
+                                    <!-- 이름과 직책 -->
+                                    <strong>강동현</strong> <small> 교육부</small>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="flex-grow-0 column mb-5" style="display:flex; flex-direction:row; width:50%; flex-wrap:wrap; justify-content: center; align-items:center">
+                            <div class="flex-shirink-0">
+                                <!-- 멤버 사진 부분, assets/members/ 폴더 안에 사진 넣어서 경로 넣어주면 됨! -->
+                                <img class="box-member" src="assets/members/hyunwook.jpeg">
+                            </div>
+                            <div class="flex-grow-1 px-5" style="display:flex; justify-content: left; align-items: center;">
+                                <p class="content" style="width:110px">
+                                    <!-- 이름과 직책 -->
+                                    <strong>장현욱</strong> <small> 교육부</small>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="flex-grow-0 column mb-5" style="display:flex; flex-direction:row; width:50%; flex-wrap:wrap; justify-content: center; align-items:center">
+                            <div class="flex-shirink-0">
+                                <!-- 멤버 사진 부분, assets/members/ 폴더 안에 사진 넣어서 경로 넣어주면 됨! -->
+                                <img class="box-member" src="assets/members/taehwan.jpeg">
+                            </div>
+                            <div class="flex-grow-1 px-5" style="display:flex; justify-content: left; align-items: center;">
+                                <p class="content" style="width:110px">
+                                    <!-- 이름과 직책 -->
+                                    <strong>원태환</strong> <small> 교육부</small>
+                                </p>
+                            </div>
+                        </div>
                         <div class="flex-grow-0 column mb-5" style="display:flex; flex-direction:row; width:50%; flex-wrap:wrap; justify-content: center; align-items:center">
                             <div class="flex-shirink-0">
                                 <!-- 멤버 사진 부분, assets/members/ 폴더 안에 사진 넣어서 경로 넣어주면 됨! -->
@@ -131,12 +203,48 @@
                         <div class="flex-grow-0 column mb-5" style="display:flex; flex-direction:row; width:50%; flex-wrap:wrap; justify-content: center; align-items:center">
                             <div class="flex-shirink-0">
                                 <!-- 멤버 사진 부분, assets/members/ 폴더 안에 사진 넣어서 경로 넣어주면 됨! -->
-                                <img class="box-member" src="assets/members/guntae.jpeg">
+                                <img class="box-member" src="assets/members/intaek.jpeg">
                             </div>
                             <div class="flex-grow-1 px-5" style="display:flex; justify-content: left; align-items: center;">
                                 <p class="content" style="width:110px">
                                     <!-- 이름과 직책 -->
-                                    <strong>박건태</strong> <small> 장비부</small>
+                                    <strong>권인택</strong> <small> 장비부</small>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="flex-grow-0 column mb-5" style="display:flex; flex-direction:row; width:50%; flex-wrap:wrap; justify-content: center; align-items:center">
+                            <div class="flex-shirink-0">
+                                <!-- 멤버 사진 부분, assets/members/ 폴더 안에 사진 넣어서 경로 넣어주면 됨! -->
+                                <img class="box-member" src="assets/members/sanghak.jpeg">
+                            </div>
+                            <div class="flex-grow-1 px-5" style="display:flex; justify-content: left; align-items: center;">
+                                <p class="content" style="width:110px">
+                                    <!-- 이름과 직책 -->
+                                    <strong>김상학</strong> <small> 장비부</small>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="flex-grow-0 column mb-5" style="display:flex; flex-direction:row; width:50%; flex-wrap:wrap; justify-content: center; align-items:center">
+                            <div class="flex-shirink-0">
+                                <!-- 멤버 사진 부분, assets/members/ 폴더 안에 사진 넣어서 경로 넣어주면 됨! -->
+                                <img class="box-member" src="assets/members/kyungmin.jpeg">
+                            </div>
+                            <div class="flex-grow-1 px-5" style="display:flex; justify-content: left; align-items: center;">
+                                <p class="content" style="width:110px">
+                                    <!-- 이름과 직책 -->
+                                    <strong>노경민</strong> <small> 장비부</small>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="flex-grow-0 column mb-5" style="display:flex; flex-direction:row; width:50%; flex-wrap:wrap; justify-content: center; align-items:center">
+                            <div class="flex-shirink-0">
+                                <!-- 멤버 사진 부분, assets/members/ 폴더 안에 사진 넣어서 경로 넣어주면 됨! -->
+                                <img class="box-member" src="assets/members/jiwoo.jpeg">
+                            </div>
+                            <div class="flex-grow-1 px-5" style="display:flex; justify-content: left; align-items: center;">
+                                <p class="content" style="width:110px">
+                                    <!-- 이름과 직책 -->
+                                    <strong>정지우</strong> <small> 장비부</small>
                                 </p>
                             </div>
                         </div>
