--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
                         <div class="card-body" style="display:flex; flex-direction:column; align-items:center; border: 1px solid rgba(0, 0, 0, 0);">
                             <h3 class="card-title mb-5" style="text-align:center">장비 안전 수칙🛠</h3>
                             <p class="card-text px-3 py-3 mb-3" style="display:flex; align-items:center; text-align:center">
-                                장비 안전 수칙이 작성된 Notion 사이트입니다!
+                                장비 사용 메뉴얼이 작성된 Notion 사이트입니다!
                             </p>
                         </div>
                         <div class="card-footer" style="text-align:center">
-                            <a class="btn btn-outline-primary btn-sm" href="https://jinmokim1012.notion.site/POWER-ON-7a86810994f54d00a44cffb6bf6019b8">
+                            <a class="btn btn-outline-primary btn-sm" href="https://www.notion.so/POWER-ON-ebe8129134344a61bdbfa14eaa62b5b0?pvs=4">
                                 Notion
                             </a>
                         </div>
@@ -97,7 +97,7 @@
                             <h3 class="card-title mb-5" style="text-align:center">집행부 회의록🧑‍💻</h3>
                             <p class="card-text px-3 py-3 mb-3" style="display:flex; align-items:center; text-align:center">POWER-ON의 집행부 회의록을 볼 수 있는 Notion 사이트의 링크입니다!</p>
                         </div>
-                        <div class="card-footer" style="text-align:center"><a class="btn btn-outline-primary btn-sm" href="https://jinmokim1012.notion.site/caa917969cde45aba8ee8e603f603ccb?v=afd5cd9401ff42f0ad85a1c77fbbd87d">Notion</a></div>
+                        <div class="card-footer" style="text-align:center"><a class="btn btn-outline-primary btn-sm" href="https://www.notion.so/237f90b5b6fa4bf0963212e8e412cd13?v=6e1ecab35f7f46b18ea6c340ea14d360&pvs=4">Notion</a></div>
                     </div>
                 </div>
             </div>
