--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="col-md-4 mb-5">
                     <div class="card-border h-100">
                         <div class="card-body" style="display:flex; flex-direction:column; align-items:center; border: 1px solid rgba(0, 0, 0, 0);">
-                            <h3 class="card-title mb-5" style="text-align:center">장비 안전 수칙🛠</h3>
+                            <h3 class="card-title mb-5" style="text-align:center">장비 사용 메뉴얼🛠</h3>
                             <p class="card-text px-3 py-3 mb-3" style="display:flex; align-items:center; text-align:center">
                                 장비 사용 메뉴얼이 작성된 Notion 사이트입니다!
                             </p>
