--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             </p>
                         </div>
                         <div class="card-footer" style="text-align:center">
-                            <a class="btn btn-outline-primary btn-sm" href="https://www.notion.so/POWER-ON-ebe8129134344a61bdbfa14eaa62b5b0?pvs=4">
+                            <a class="btn btn-outline-primary btn-sm" href="https://grand-pasta-bbd.notion.site/POWER-ON-a489e6a412de491092f7774703cd3e7e?pvs=4">
                                 Notion
                             </a>
                         </div>
@@ -97,7 +97,7 @@
                             <h3 class="card-title mb-5" style="text-align:center">집행부 회의록🧑‍💻</h3>
                             <p class="card-text px-3 py-3 mb-3" style="display:flex; align-items:center; text-align:center">POWER-ON의 집행부 회의록을 볼 수 있는 Notion 사이트의 링크입니다!</p>
                         </div>
-                        <div class="card-footer" style="text-align:center"><a class="btn btn-outline-primary btn-sm" href="https://www.notion.so/237f90b5b6fa4bf0963212e8e412cd13?v=6e1ecab35f7f46b18ea6c340ea14d360&pvs=4">Notion</a></div>
+                        <div class="card-footer" style="text-align:center"><a class="btn btn-outline-primary btn-sm" href="https://grand-pasta-bbd.notion.site/da08db9d11f24301a29652d3dc81e68b?v=e158d85aa3d04178b2210d5bec421905&pvs=4">Notion</a></div>
                     </div>
                 </div>
             </div>
