--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
             <section class="section mb-5 mt-5">
                 <div class="container">                    
                     <p><strong>파워온</strong>은 로봇축구 동아리로 1991년 창설된 후, 현재는 로봇을 자유롭게 창작할 수 있는 로봇 및 메이킹 동아리로 활동하고 있습니다!</p>
-                    <p>현재는 기술 트렌드에 맞게 인공지능을 결합한 자율주행 혹은 스마트 키오스크와 같은 로봇들과, 취미로 만드는 메이킹 작품들을 위주로 활동을 진행하고 있으며, 이러한 창작에 대해 자유롭게 소통할 수 있는 동아리를 목표로 하고 있습니다.</p>
+                    <p>저희는 기술 트렌드에 맞게 인공지능을 결합한 자율주행 혹은 스마트 키오스크와 같은 로봇들과, 취미로 만드는 메이킹 작품들을 위주로 활동을 진행하고 있으며, 이러한 창작에 대해 자유롭게 소통할 수 있는 동아리를 목표로 하고 있습니다.</p>
                     <br>
                     <p><strong>POWER-ON</strong>, founded in 1991, started as a robot-football club and now creates robots and carries out various maker projects.</p>
                     <p>Nowadays, we make robots reflecting current technological trends, like robots combined with a smart kiosk or robots with autonomous driving technology based on AI. We also do some carpentry or 3d printing works just for fun.</p>
