--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-5">
                 <!-- 파워온 URL 부분 - 혹시 도메인 변경할 경우 변경 필요 -->
-                <a class="navbar-brand" href="https://poweron.club">
+                <a class="navbar-brand" href="https://poweron.postech.ac.kr">
                     <img src="assets/poweron-text.svg" alt="POWER-ON" width="auto" height="30rem"/>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <!-- 페이지들로 가는 링크, 마지막 contact는 이메일로 연결! -->
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="https://poweron.club">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://poweron.club/about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://poweron.club/project">Project</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="https://poweron.postech.ac.kr">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://poweron.postech.ac.kr/about">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://poweron.postech.ac.kr/project">Project</a></li>
                         <li class="nav-item"><a class="nav-link" href="mailto:donghyunlim@postech.ac.kr">Contact</a></li>
                     </ul>
                 </div>
@@ -47,7 +47,7 @@
                     <p>
                         POSTECH 유일의 로봇 및 메이킹 동아리, <strong>POWER-ON</strong>
                     </p>
-                    <a class="btn btn-primary" href="https://poweron.club/about">About</a>
+                    <a class="btn btn-primary" href="https://poweron.postech.ac.kr/about">About</a>
                     <a class="btn btn-secondary" href="https://github.com/power-on-github"><i class="fab fa-github"></i> GitHub</a>
                     <a class="btn btn-outline-primary" href="https://instagram.com/power_on_postech?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i> Instagram</a>
                 </div>
@@ -61,7 +61,7 @@
                         <p class="text-white mt-5 mb-5">
                             <h3>POWER-ON PROJECTS</h3>
                         </p>
-                        <a class="btn btn-outline-primary" href="https://poweron.club/project">보러가기</a> 
+                        <a class="btn btn-outline-primary" href="https://poweron.postech.ac.kr/project">보러가기</a> 
                     </div>
                 </div>
             </div>
