--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
                         <li class="nav-item"><a class="nav-link" href="https://poweron.postech.ac.kr">Home</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="https://poweron.postech.ac.kr/about">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="https://poweron.postech.ac.kr/project">Project</a></li>
-                        <li class="nav-item"><a class="nav-link" href="mailto:donghyunlim@postech.ac.kr">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="mailto:power-on@postech.ac.kr">Contact</a></li>
                     </ul>
                 </div>
             </div>
