--- a/project.html
+++ b/project.html
@@ -74,6 +74,27 @@
 
                 <div class="card flex-grow-0 text-white mb-5 mx-1 text-center" style="width:550px; height:350px; border:20%">
                     <!-- 프로젝트 이미지, assets/ 폴더에 넣어서 경로를 src에 써주면 됨! 이미지는 16:9 비율에 가깝게 하는 걸 권장 -->
+                    <img class="card-img-top" src="assets/projects/fluid_robot_arm.jpg" alt="bg-secondary" style="height:100%; filter:brightness(40%); border-radius:1.7rem">
+                    <div class="card-img-overlay" style="display: flex; flex-direction:column; align-items: center;">
+                        <div class="card-body flex-grow-1" style="display: flex; align-items:center; justify-items:center">
+                            <p class="text-white my-1" style="display:flex; flex-direction:column; align-items:center; justify-items:center;">
+                                <!-- 프로젝트 제목 -->
+                                <!-- <i class="fas fa-trophy text-warning"></i>는 수상한 프로젝트에만 추가 바람!(트로피 아이콘) -->
+                                <h3> <i class="fas fa-trophy text-warning"></i> sloshing control with Physics-Informed RNN by 6-axis manipulator </h3>
+                            </p>
+                        </div>
+                        <div class="flex-shrink-1" style="display:flex; flex-direction:row; align-items:center; justify-items:center">
+                            <!-- 보고서 있을 경우 보고서 버튼 -->
+                            <a class="btn btn-primary mx-2" href="https://drive.google.com/file/d/1sF2SkSY6Bl4_ZGDy6cquZ-8gXaIp6cQq/view?usp=sharing">보고서</a>
+                            <!-- GitHub 있을 경우 Github 버튼 -->
+                            <!-- <a class="btn btn-secondary mx-2" href="https://github.com/imdonghyun/catbot"><i class="fab fa-github"></i> GitHub</a> -->
+                            <a class="btn text-white mx-2" href="https://www.youtube.com/watch?v=T9wJdGqZ08M&t=501s" style="background-color: #C4302B;"><i class="fab fa-youtube"></i> YouTube</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card flex-grow-0 text-white mb-5 mx-1 text-center" style="width:550px; height:350px; border:20%">
+                    <!-- 프로젝트 이미지, assets/ 폴더에 넣어서 경로를 src에 써주면 됨! 이미지는 16:9 비율에 가깝게 하는 걸 권장 -->
                     <img class="card-img-top" src="assets/projects/balancing_robot.png" alt="bg-secondary" style="height:100%; filter:brightness(40%); border-radius:1.7rem">
                     <div class="card-img-overlay" style="display: flex; flex-direction:column; align-items: center;">
                         <div class="card-body flex-grow-1" style="display: flex; align-items:center; justify-items:center">
